# esp-idf-brotli

./: README.md
esp32/: CMakeLists.txt
http-server/: CMakeLists.txt  README.md
http-server/main/: CMakeLists.txt  file_server.c  main.c
http_file_server/: README.md  partitions_example.csv
http_file_server/main/: brotli.c  file_server.c
mqtt/: CMakeLists.txt  README.md  mqtt-file.py  partitions_example.csv
mqtt/main/: CMakeLists.txt  main.c
python/: compress.py  decompress.py
spiffs/: CMakeLists.txt  README.md
spiffs/main/: CMakeLists.txt  brotli.c  brotli.h  main.c
tcp-server/: CMakeLists.txt  README.md  tcp-client.py
tcp-server/main/: CMakeLists.txt  brotli.c  main.c  tcp_server.c
